<resources>
    <string name="app_name">Loft</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_recent">Recent</string>
    <string name="title_ongoing">Ongoing</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n"
        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards."
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_course_details">Course Title</string>
    <string name="title_share">Share</string>
    <string name="course_duration"><u>Course Duration : 12 Months</u></string>
    <string name="read_less">Show Less</string>
    <string name="read_more">Read More</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_facebook">Login with Facebook</string>
    <string name="sign_in_google">Login with Google</string>
    <string name="sign_in_email">Login with Email</string>
    <string name="dont_have_account">Don\'t Have an account? <u>Sign Up</u></string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="agree_with_terms_and_conditions">Agree with <u>Terms and Conditions</u></string>
    <string name="forgot_password">Forgot Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string-array name="sample">

        <item>Android</item>
        <item>iOs</item>
        <item>Windows</item>
        <item>Blackberry</item>
        <item>Oppo</item>
        <item>Vivo</item>
        <item>Google</item>
        <item>Android</item>
        <item>iOs</item>
        <item>Windows</item>
        <item>Blackberry</item>
        <item>Oppo</item>
        <item>Vivo</item>
        <item>Google</item>
        <item>Android</item>
        <item>iOs</item>
        <item>Windows</item>
        <item>Blackberry</item>
        <item>Oppo</item>
        <item>Vivo</item>
        <item>Google</item>
        <item>Android</item>
        <item>iOs</item>
        <item>Windows</item>
        <item>Blackberry</item>
        <item>Oppo</item>
        <item>Vivo</item>
        <item>Google</item>
    </string-array>
    <string-array name="language">

        <item>Select Language</item>
        <item>English</item>
        <item>हिंदी</item>
        <item>ગુજરાતી</item>
        <item>Marathi</item>
        <item>Telugu</item>
        <item>Malayalam</item>
        <item>Bangla</item>
        <item>Tamil</item>

    </string-array>
    <string name="title_activity_account_settings">Account Settings</string>
    <string name="title_activity_terms_conditions">Terms and Conditions</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="title_activity_change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="city">City</string>
    <string name="send">Send</string>
    <string name="title_download_module">Download this module</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">We are a team of like-minded people, specialized in development of Android App Development creating new trends across the app space. Glad to Help in anyway!</string>
    <string name="app_version">1.0</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">http://www.vethics.com</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">http://www.vethics.com</string>
    <string name="title_version">Version</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="download_quality"><font color="#3163C2">Download Quality</font></string>
</resources>