<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.vethics.loft.ChangePasswordActivity"
    tools:showIn="@layout/activity_change_password">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_change_password_old_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorDarkGray"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/MyErrorText"
            app:hintTextAppearance="@style/MyHintText1">

            <EditText
                android:id="@+id/edt_change_pass_old_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/old_password"
                android:inputType="text|textPassword"
                android:textColor="@color/colorAccent"
                android:theme="@style/BlackEditText" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_change_password_new_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorDarkGray"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/MyErrorText"
            app:hintTextAppearance="@style/MyHintText1">

            <EditText
                android:id="@+id/edt_change_pass_new_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_password"
                android:inputType="text|textPassword"
                android:textColor="@color/colorAccent"
                android:theme="@style/BlackEditText" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_change_password_confirm_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorDarkGray"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/MyErrorText"
            app:hintTextAppearance="@style/MyHintText1">

            <EditText
                android:id="@+id/edt_change_pass_confirm_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:inputType="text|textPassword"
                android:textColor="@color/colorAccent"
                android:theme="@style/BlackEditText" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_color_corner"
            android:text="@string/title_activity_change_password"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
