<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp"
    tools:context="fragment.ContactUsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginTop="16dp"
            android:padding="@dimen/_2sdp"
            app:srcCompat="@drawable/ic_setting_profile" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_support_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-8dp"
            android:textColorHint="#BBBBBD"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/MyErrorText"
            app:hintTextAppearance="@style/MyHintText1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_support_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-8dp"
                android:hint="@string/name"
                android:inputType="text"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                android:theme="@style/BlackEditText" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginTop="16dp"
            android:padding="@dimen/_2sdp"
            app:srcCompat="@drawable/ic_setting_email" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_support_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-8dp"
            android:textColorHint="#BBBBBD"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/MyErrorText"
            app:hintTextAppearance="@style/MyHintText1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_support_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-8dp"
                android:enabled="true"
                android:hint="@string/email"
                android:inputType="text|textEmailAddress"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                android:theme="@style/BlackEditText" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:padding="@dimen/_2sdp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_setting_email" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_support_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-8dp"
            android:textColorHint="#BBBBBD"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/MyErrorText"
            app:hintTextAppearance="@style/MyHintText1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_support_address"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="top"
                android:hint="Message"
                android:inputType="textMultiLine"
                android:textColor="@color/colorAccent"
                android:textColorHint="#BBBBBD"
                android:textSize="14sp"
                android:theme="@style/BlackEditText" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginTop="16dp"
            android:padding="@dimen/_2sdp"
            app:srcCompat="@drawable/ic_setting_email" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_support_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-8dp"
            android:textColorHint="#BBBBBD"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/MyErrorText"
            app:hintTextAppearance="@style/MyHintText1">

            <AutoCompleteTextView
                android:id="@+id/auto_complete_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-8dp"
                android:hint="@string/city"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/colorAccent"
                android:textColorHint="#BBBBBD"
                android:textSize="14sp"
                android:theme="@style/BlackEditText" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_support_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_color_corner"
        android:text="@string/send"
        android:textColor="@color/colorWhite" />
</LinearLayout>
